--- a/AsteroidGame_2020/AsteroidGame_2020.csproj
+++ b/AsteroidGame_2020/AsteroidGame_2020.csproj
@@ -52,6 +52,7 @@
     <Compile Include="BaseObject.cs" />
     <Compile Include="Bullet.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="Interface\ICollision.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
