--- a/AsteroidGame_2020/AsteroidGame_2020.csproj
+++ b/AsteroidGame_2020/AsteroidGame_2020.csproj
@@ -77,5 +77,10 @@
   <ItemGroup>
     <None Include="Resources\FirstAidKit.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\data.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
