--- a/DataBaseLesson-7/App.config
+++ b/DataBaseLesson-7/App.config
@@ -4,8 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
     <connectionStrings>
-      <add name="DefaultConnection"
-           connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=EmployeesDB;Integrated Security=True;"
+      <add name="DataBaseLesson-7.Properties.Settings.Test7ConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Test7;Integrated Security=True;Pooling=False"
            providerName="System.Data.SqlClient"/>
     </connectionStrings>
 </configuration>
