--- a/Lesson_5_HomeWork/App.config
+++ b/Lesson_5_HomeWork/App.config
@@ -5,7 +5,7 @@
     </startup>
   <connectionStrings>
     <add name="DefaultConnection"
-         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=EmployeesDB;Integrated Security=True;"
+         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Lesson_7_Homework;Integrated Security=True;Pooling=False"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
